# photon-mlir-bridge

./: .bandit  .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env.example  .gitignore  .license-header.txt  .pre-commit-config.yaml  .releaserc.json  .yamllint.yml  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  RESEARCH_PUBLICATION_GUIDE.md  SDLC_IMPLEMENTATION_COMPLETE.md  SECURITY.md  SETUP_REQUIRED.md  TERRAGON_AUTONOMOUS_DEPLOYMENT_COMPLETE.md  TERRAGON_AUTONOMOUS_EXECUTION_COMPLETE_V4.md  TERRAGON_AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_V5_COMPLETE.md  TERRAGON_SDLC_IMPLEMENTATION_COMPLETE.md  THERMAL_QUANTUM_DEPLOYMENT_GUIDE.md  autonomous_test_runner.py  (+13 more)
.github/: ISSUE_TEMPLATES.md  PULL_REQUEST_TEMPLATE.md  RELEASE_PROCESS.md  WORKFLOW_TEMPLATES.md  project-metrics.json
.terragon/: DEPLOYMENT_SUMMARY.md  README.md  autonomous-executor.py  config.yaml  discovered-backlog.json  discovery-engine.py  value-metrics.json
benchmarks/: README.md
deployment/: autonomous-production-deployment.yml  docker-compose.production.yml  monitoring-stack.yml  production_deployment_orchestrator.py  production_deployment_package.yaml
deployment/config/: production.json
deployment/docker/: Dockerfile.production
deployment/helm/quantum-scheduler/: Chart.yaml
deployment/kubernetes/: quantum-scheduler.yaml
deployment/scripts/: entrypoint.sh  healthcheck.sh
docs/: README.md  ROADMAP.md  conf.py
docs/adr/: 0001-mlir-framework-choice.md  0002-photonic-dialect-design.md  README.md
docs/guides/: GETTING_STARTED.md  README.md
docs/monitoring/: README.md
docs/operations/: deployment-guide.md
docs/runbooks/: incident-response.md  system-health.md
docs/security/: SBOM.md  vulnerability-management.md
docs/workflows/: README.md  SETUP_GUIDE.md
docs/workflows/examples/: ci.yml  docs.yml  performance.yml  release.yml  security.yml
examples/: autonomous_generation_showcase.py  autonomous_sdlc_showcase.py  basic_compilation.py  complete_research_showcase.py  complete_sdlc_demo.py  demo.py  i18n_demo.py  quantum_planning_demo.py  robust_compilation.py  simple_autonomous_demo.py  thermal_aware_scheduling_demo.py
include/photon/core/: AutonomousOrchestrator.h  ErrorHandling.h  Logging.h  PhotonicCompiler.h
include/photon/dialects/: PhotonicDialect.h  PhotonicOps.td
include/photon/transforms/: PhotonicPasses.h
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: photon-mlir-overview.json
monitoring/grafana/datasources/: prometheus.yml
python/photon_mlir/: __init__.py  advanced_deployment_orchestrator.py  advanced_quantum_error_correction.py  advanced_quantum_photonic_bridge.py  advanced_quantum_scale_orchestrator.py  advanced_resilience_framework.py  advanced_resilience_orchestrator.py  advanced_thermal_quantum_manager.py  advanced_wdm_optimizer.py  autonomous_benchmark_orchestrator.py  autonomous_performance_optimizer.py  autonomous_quantum_execution_engine.py  autonomous_research_validator.py  autonomous_resilience_orchestrator.py  autonomous_sdlc_orchestrator.py  autonomous_security_framework.py  autonomous_validation_suite.py  caching_system.py  circuit_breaker.py  circuit_breaker_aliases.py  cli.py  compiler.py  comprehensive_benchmark_suite.py  comprehensive_test_orchestrator.py  comprehensive_validation_suite.py  concurrency.py  config.py  core.py  diagnostics.py  distributed_quantum_photonic_orchestrator.py  enhanced_validation.py  enterprise_monitoring_system.py  enterprise_security_fortress.py  enterprise_security_framework.py  enterprise_security_suite.py  global_compliance_orchestrator.py  high_performance_distributed_compiler.py  i18n.py  i18n_manager_alias.py  logging_config.py  (+33 more)
python/photon_mlir/locales/: de.json  en.json  es.json  fr.json  ja.json  zh.json
scripts/automation/: README.md  code_quality_monitor.py  collect_metrics.py  dependency_updates.py  repository_maintenance.py
scripts/metrics/: generate_metrics_dashboard.py
scripts/security/: quantum_security_scanner.py
src/core/: AutonomousOrchestrator.cpp  ErrorHandling.cpp  Logging.cpp  PhotonicCompiler.cpp
src/dialects/: PhotonicDialect.cpp
src/photon_mlir_bridge/: __init__.py  codegen.py  dialect.py  ir.py  rewriter.py
src/tools/: photon-compile.cpp
src/transforms/: PhotonicPasses.cpp
tests/: CMakeLists.txt  README.md  conftest.py  simple_test_runner.py  test_autonomous_implementation_complete.py  test_autonomous_sdlc_complete.py  test_autonomous_systems_integration.py  test_comprehensive_autonomous_systems.py  test_photon_mlir.py
tests/benchmarks/compilation/: compilation_benchmark.cpp
tests/benchmarks/performance/: test_compilation_benchmarks.py  test_enterprise_performance_benchmarks.py  test_quantum_benchmarks.py
tests/fixtures/data/: test_models.py
tests/fixtures/ir/: simple_linear.mlir
tests/integration/: test_autonomous_sdlc_integration.py  test_enhanced_compilation.py
tests/integration/end_to_end/: test_compilation_pipeline.py  test_full_pipeline.py  test_quantum_integration.py
tests/unit/core/: test_photonic_device.cpp
tests/unit/python/: test_compiler.py  test_core.py  test_quantum_scheduler.py  test_thermal_optimization.py
