[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "photon-mlir-bridge"
version = "0.1.0"
description = "Compiler bridge from ML frameworks to silicon photonic accelerators"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Daniel Schmidt", email = "danschmidt88@gmail.com"},
]
keywords = ["photonics", "compiler", "mlir", "silicon-photonics", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/photon-mlir-bridge"

[tool.pytest.ini_options]
testpaths = ["tests"]
